# py_cpp_modmapper

./: .gitignore  cpp_server  pyproject.toml
py_cpp_modmapper/: depdb_types.py  dependency_db.py  dependency_scan.py  main.py  parsing.py
test_cpp_project/modules/: bottom.cppm  middle_a.cppm  middle_b.cppm  top.cppm
test_cpp_project/src/: main.cpp  top-impl.cpp
tests/: conftest.py  depdb_compilation_test.py  depdb_test.py  tmmb_test.py
